# Job-Scheduler-Microservice

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/api/: __init__.py  middleware.py
app/api/v1/: health.py  jobs.py
app/core/: __init__.py  exceptions.py  executor.py  scheduler.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  execution.py  job.py  schedule.py
app/schemas/: __init__.py  execution.py  job.py  schedule.py
app/services/: __init__.py  executor_service.py  job_service.py  scheduler_service.py
app/tasks/: __init__.py  celery_app.py  job_tasks.py  scheduled_tasks.py
app/utils/: __init__.py  cache.py  logger.py  metrics.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/prometheus/: prometheus.yml
tests/: __init__.py  conftest.py
